--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
+    "axios": "^1.7.9",
     "body-parser": "^1.20.3",
     "express": "^4.21.2",
+    "node-cron": "^3.0.3",
     "puppeteer": "^24.3.0"
   }
 }
