--- a/package.json
+++ b/package.json
@@ -1,4 +1,12 @@
 {
+  "name": "kylongtech",
+  "version": "1.0.0",
+  "description": "",
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js"
+  },
   "dependencies": {
     "axios": "^1.7.9",
     "body-parser": "^1.20.3",
