--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "express": "^4.21.2",
     "node-cron": "^3.0.3",
     "puppeteer": "^24.3.0"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
