--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "axios": "^1.7.9",
     "body-parser": "^1.20.3",
     "express": "^4.21.2",
-    "node-cron": "^3.0.3",
-    "puppeteer": "^24.3.0"
+    "node-cron": "^3.0.3"
   },
   "engines": {
     "node": "16.x"
