--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
   "dependencies": {
     "axios": "^1.7.9",
     "body-parser": "^1.20.3",
+    "cookie-parser": "^1.4.7",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "node-cron": "^3.0.3"
+    "i": "^0.3.7",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.11.0",
+    "node-cron": "^3.0.3",
+    "npm": "^11.1.0"
   },
   "engines": {
     "node": "16.x"
