--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "i": "^0.3.7",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.11.0",
+    "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "npm": "^11.1.0"
   },
