--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
+    "marked": "^15.0.8",
     "nodemailer": "^6.10.1"
   },
   "engines": {
